--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.3.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.1.0",
+    "hardhat-gas-reporter": "^1.0.4"
   }
 }
