--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
+    "hardhat-abi-exporter": "^2.2.1",
     "hardhat-gas-reporter": "^1.0.4"
   }
 }
